mobile-sidebar-done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </head>
 <body>
-  <!-- <div class="sidebar-mobile-menu">
+  <div class="sidebar-mobile-menu" style="display: none">
     <div class="close-icon-container"><img src="./assets/images/icon-menu-close.svg" alt="mobile-menu-close-icon" class="mobile-menu-close" width="25" height="25"></div>
     <ul>
       <li>Home</li>
@@ -20,7 +20,7 @@
       <li>Trending</li>
       <li>Categories</li>
     </ul>
-  </div> -->
+  </div>
   <main>
     
     <header>
